# Straf

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.sample.json  config.verbose.json  config_vignette_test.json
.github/: copilot-instructions.md
.prompts/: solid-refactor.prompt.md
build-tidy/: Straf.sln
docs/: ARCHITECTURE.md  HIGH_LEVEL_IMPLEMENTATION.md
include/Straf/: Audio.h  Config.h  Detector.h  Logging.h  MiniJson.h  ModernLogging.h  Overlay.h  PenaltyManager.h  STT.h  Tray.h  logging.h  resource.h
resources/: StrafAgent.rc
src/: AudioSilent.cpp  AudioStub.cpp  AudioWasapi.cpp  Config.cpp  DetectorStub.cpp  DetectorText.cpp  Logging.cpp  ModernLogging.cpp  OverlayBar.cpp  OverlayClassic.cpp  OverlayStub.cpp  OverlayVignette.cpp  PenaltyManager.cpp  STTSapi.cpp  STTStub.cpp  STTVosk.cpp  STTVoskStub.cpp  TrayWin.cpp  logging.cpp  main.cpp
